# ESP-then

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix  monitor.sh  packetStructure.md  shell.nix
.github/workflows/: ci.yaml
esp32-arduino/basicSender/: platformio.ini
esp32-arduino/basicSender/src/: main.cpp
src/: lib.rs
