[package]
name = "espthen"
version = "0.1.0"
edition = "2021"
authors = ["Robotix_00"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = "0.33.0"
pnet_macros = "0.33.0"
pnet_macros_support = "0.33.0"
pnet_packet = "0.33.0"
radiotap = { version = "1.3.0" }
